# codechallenges

./: README.md
codechef/BaseStructures/: CMakeLists.txt  Layer1Structures.h  Structure.cpp  Structure.h  main.cpp
codechef/BaseStructures/tree/: tree.h
codechef/TRS_problem/: CMakeLists.txt  README  edges.txt  main  main.cpp  makefile  old_makefile
codechef/TRS_problem/tree/: simple_tree  simple_tree.h  tree  tree.h  tree.h.gch  types.h  types.h.gch
codechef/graphs/: KPERFMAT.md  graph.cpp  graph.h  graph_KPERFMAT.cpp  graph_KPERFMAT.h  graphs_NumberOfPerfectMatches.cpp  main  makefile
